# OpenCodeWriter

./: .gitignore  AGENTS.md  CLAUDE.md  DEV-PLAN.md  Design-Brief.md  Product-Spec.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/: EVOLUTION.md  settings.json
.codex/: EVOLUTION.md  hooks.json
docs/: skill-sources.md
scripts/: test-streaming-display.mjs
sdk-adapter/: package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/examples/: outline.md
src-tauri/resources/templates/: chapters.md  characters.md  content.md  outline.md
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/ai/: client.rs  context.rs  events.rs  mod.rs  session_registry.rs
src-tauri/src/ai/runtime/: adapter_events.rs  manager.rs  mcp.rs  mock.rs  mod.rs  openai_compatible.rs  resilient.rs  sdk_backed.rs  types.rs
src-tauri/src/ai/skills/: mod.rs  registry.rs
src-tauri/src/ai/tasks/: mod.rs  request_builder.rs  service.rs  task_type.rs
src-tauri/src/ai/tools/: knowledge_tools.rs  mod.rs  project_tools.rs  registry.rs  story_tools.rs  world_tools.rs
src-tauri/src/commands/: ai.rs  chapters.rs  character_assets.rs  characters.rs  contents.rs  generation_logs.rs  jobs.rs  knowledge.rs  mod.rs  model_routes.rs  outlines.rs  profiles.rs  projects.rs  runtime_tools.rs  settings.rs  snapshots.rs  stale.rs  story.rs  style.rs  style_rules.rs  task_center.rs  workbench_queries.rs  world.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/resources/: mod.rs
(+189 files in other folders)
