[package]
name = "opencode-writer"
version = "0.1.0"
description = "AI-assisted novel writing desktop application"
authors = ["chen"]
edition = "2021"

[lib]
name = "opencode_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
